<resources>
    <string name="app_name">onGoal</string>
    <string name="don_t_have_an_account">First time here?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_bottom">First time here? Sign up.</string>
    <string name="login_bottom">Not the first time here? Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Log in</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">LOGOUT</string>
    <string name="information_about_app">Information about app</string>
    <string name="create_new_goal">Create new goal</string>
    <string name="ongoing_goals">Ongoing goals</string>
    <string name="city_profile">Arad, Romania</string>
    <string name="name_profile">Caius Alexandru Suciu</string>
    <string name="email_person">caiussuciu@gmail.com</string>
    <string name="phone_profile">+40 753 753 671</string>
    <string name="phone_vw_pop">Phone</string>
    <string name="linkedin_profile">caius-alexandru-suciu</string>
    <string name="linkedin">Linkedin</string>
    <string name="github_profile">github.com/Caisman24</string>
    <string name="github">GitHub</string>
    <string name="show_developer">Show Developer</string>
    <string name="textAboutApp">onGoal was designed as a tool to keep you on track. The application took birth during the classes within Digital Workshop for Programmers.</string>
    <string name="textAboutDev">This was designed by Caius Suciu during his second year in university.</string>
    <string name="title_activity_on_going_goals">OnGoingGoals</string>
    <string name="create_goal">Create GOAL</string>
    <string name="question_create_goal">What do you want to accomplish?</string>
    <string name="number_of_days">Number of days</string>
    <string name="button_create_goal">Create</string>
    <string name="title_of_goal">Title of goal</string>
    <string name="adapter_current_day">Current day</string>
    <string name="adapter_day_limit">Day limit</string>

    <string name="termsText1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic</string>
    <string name="termsText2">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</string>
    <string name="termsText3">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. </string>

    <string name="terms_and_conditions_checkbox">I agree with the <u>Terms and Conditions</u> </string>

    <string name="send_email">Send email</string>
    <string name="reset_password">Reset Password</string>
</resources>
