<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        tools:ignore="MissingConstraints">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_launcher_foreground"/>
    </RelativeLayout>

    <RelativeLayout
        app:layout_constraintTop_toBottomOf="@id/rlHeader"
        android:layout_width="220dp"
        android:layout_height="480dp"
        android:background="@drawable/shape_left_panel"
        tools:ignore="MissingConstraints"/>
    
    <LinearLayout
        android:id="@+id/LoginPanel"
        app:layout_constraintTop_toBottomOf="@id/rlHeader"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/shape_login_panel"
        android:paddingTop="70dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        
        <EditText
            android:hint="@string/email"
            android:drawableEnd="@drawable/ic_mail"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

        <EditText
            android:hint="@string/password"
            android:drawableEnd="@drawable/ic_smart_key"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>
        
        <TextView
            android:layout_marginTop="15dp"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>
    
    <Button android:text="@string/login"
        android:layout_marginBottom="5dp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/LoginPanel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape_login_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        tools:ignore="MissingConstraints" />

    <TextView android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toTopOf="@id/LoginPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"/>

    <TextView android:textSize="20sp"
        android:gravity="right"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toTopOf="@id/LoginPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        tools:ignore="RtlHardcoded" />
    
    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="20dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <TextView
            android:text="@string/don_t_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="15dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>