<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:id="@id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/loginLogoHeight"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/loginLogoPadding"
            android:src="@drawable/icon_brand" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/loginShapePanelWidth"
        android:layout_height="@dimen/registerShapePanelHeight"
        android:background="@drawable/shape_right_panel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlHeader"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/LoginPanel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/registerBoxHeight"
        android:layout_marginTop="@dimen/loginBoxMarginTop"
        android:background="@drawable/shape_login_panel"
        android:orientation="vertical"
        android:paddingLeft="@dimen/loginBoxPadding"
        android:paddingTop="@dimen/loginBoxPaddingTop"
        android:paddingRight="@dimen/loginBoxPadding"
        app:layout_constraintTop_toBottomOf="@id/rlHeader"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="@dimen/loginEditTextHeight"
            android:drawableEnd="@drawable/ic_person"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/loginEditTextHeight"
            android:drawableEnd="@drawable/ic_mail"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/loginEditTextHeight"
            android:drawableEnd="@drawable/ic_smart_key"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/loginEditTextHeight"
            android:drawableEnd="@drawable/ic_smart_key"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="@dimen/loginButtonWidth"
        android:layout_height="@dimen/loginButtonHeight"
        android:layout_marginBottom="@dimen/loginButtonMarginBottom"
        android:background="@drawable/shape_login_button"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/LoginPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/loginTextViewMarginStart"
        android:text="@string/login"
        android:textSize="@dimen/loginTextSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/LoginPanel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/loginTextViewMarginStart"
        android:gravity="right"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:textSize="@dimen/loginTextSize"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/LoginPanel"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>