<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/loginLogoHeight"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/loginLogoPadding"
            android:src="@drawable/icon_brand" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/loginShapePanelWidth"
        android:layout_height="@dimen/loginShapePanelHeight"
        android:background="@drawable/shape_left_panel"
        app:layout_constraintTop_toBottomOf="@id/rlHeader"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/LoginPanel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/loginBoxHeight"
        android:layout_marginTop="@dimen/loginBoxMarginTop"
        android:background="@drawable/shape_login_panel"
        android:orientation="vertical"
        android:paddingLeft="@dimen/loginBoxPadding"
        android:paddingTop="@dimen/loginBoxPaddingTop"
        android:paddingRight="@dimen/loginBoxPadding"
        app:layout_constraintTop_toBottomOf="@id/rlHeader"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/loginEditTextHeight"
            android:drawableEnd="@drawable/ic_mail"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/loginEditTextHeight"
            android:drawableEnd="@drawable/ic_smart_key"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginResetPassMarginTop"
            android:gravity="right"
            android:text="@string/forgot_password"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="@dimen/loginButtonWidth"
        android:layout_height="@dimen/loginButtonHeight"
        android:layout_marginBottom="@dimen/loginButtonMarginBottom"
        android:background="@drawable/shape_login_button"
        android:text="@string/login"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/LoginPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/loginTextViewMarginStart"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/loginTextSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/LoginPanel" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/loginTextViewMarginStart"
        android:gravity="right"
        android:text="@string/sign_up"
        android:textSize="@dimen/loginTextSize"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/LoginPanel"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/loginBottomPadding"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account" />

        <TextView
            android:id="@+id/tvSignUpBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/loginBottomTextMarginStart"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/loginTextSize" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>