<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textGoalTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_of_goal"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/adapterMarginTop"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/textGoalNumberOfDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adapter_current_day"
                    android:layout_marginEnd="@dimen/adapterMargin"
                    android:textSize="@dimen/adapterTextSize" />

                <TextView
                    android:id="@+id/textGoalDayLimit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/adapterTextSize"
                    android:layout_marginStart="@dimen/adapterMargin"
                    android:text="@string/adapter_day_limit" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>