<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/popupBackground"
    tools:context=".AboutApp">

    <View
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="5dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/titleViewPopup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/information_about_app"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:id="@+id/linearAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxWidth="90dip"
                android:text="@string/textAboutApp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearDeveloper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearAbout"
            android:layout_marginTop="50dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxWidth="90dip"
                android:text="@string/textAboutDev"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearDeveloper"
            android:layout_marginTop="100dp"
            android:gravity="center">

            <Button
                android:id="@+id/buttonShowPopup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:onClick="ShowPopup"
                android:text="@string/show_developer"
                android:textColor="@color/white"
                tools:ignore="MissingConstraints" />

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>